# fast-api-plus-react

./: README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  config.py  crud.py  database.py  pyproject.toml  schema.py
backend/app/: main.py
backend/database/: config.py  database.py
backend/models/: user_model.py
backend/services/: user_service.py
backend/tests/: conftest.py  test_user.py
backend/utils/: security.py
database/: init.sql
frontend/: Dockerfile  package-lock.json
frontend/app/: page.tsx
