[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
SQLAlchemy = "^2.0.25"  # If using a database
asyncpg = "^0.29.0"  # If using PostgreSQL
redis = "^5.0.1"  # If using Redis

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
black = "^23.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
